refactor: type media object creation inputs
